--- a/grc338/website-visual-language/style.css
+++ b/grc338/website-visual-language/style.css
@@ -1,194 +1,178 @@
 /* CSS DOCUMENT */
-
-html, body, div, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, 
-a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, 
-small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, 
-fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, 
-article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
+ html, body, div, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+     margin: 0;
+     padding: 0;
+     border: 0;
+     font-size: 100%;
+     font: inherit;
 }
-
-body {
-	font-family: "limon-regular", sans-serif;
-	background: rgb(255, 140, 188);
-	color: rgb(255, 255, 255);
-	line-height: 1.4;
+ body {
+     font-family: "limon-regular", sans-serif;
+     background: #F2C9E0;
+     color: rgb(255, 255, 255);
+     line-height: 1.4;
 }
-
-div.home-container {
-    background-image: url("home-background.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    position: relative;
-    min-height: 100vh;
+ div.home-container {
+     background-image: url("home-background.jpg");
+     background-position: center center;
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: cover;
+     position: relative;
+     min-height: 100vh;
+     margin: 0 3em 0 
 }
-
-div.container {
-	position: relative;
-	min-height: 100vh;
-	background: rgb(255, 140, 188);
+ div.container {
+     position: relative;
+     min-height: 100vh;
+     background: #FFA5D8;
+     margin: 0 3em 0 
 }
-
-main {
-	padding: 2rem 1rem 4rem;
+ main {
+     padding: 2rem 1rem 4rem;
 }
-
-img {
-  display: block;
-  width: 100%;
-  max-width: 50rem;   
-  min-width: 20rem;   
-  margin: 1rem 0 0.5rem;   
-  box-sizing: border-box;
+ img {
+     display: block;
+     width: 100%;
+     max-width: 50rem;
+     min-width: 20rem;
+     margin: 1rem 0 0.5rem;
+     box-sizing: border-box;
 }
-
-
-header {
-	display: grid;
-	grid-template-columns: 1fr auto;
-	align-items: center;
-	background: #c3a7df;
-	padding: 0rem 1rem 1rem 0rem;
+ header {
+     display: grid;
+     grid-template-columns: 1fr auto;
+     align-items: center;
+     background: rgb(201, 214, 220);
+     padding: 0rem 1rem 1rem 0rem;
 }
-
-h1 img {
-  width: auto;
-  max-width: 10em;
-  min-width: 0;
+ h1 img {
+     width: auto;
+     max-width: 7em;
+     min-width: 0;
+     margin: 1.5em auto 0 3em 
 }
-
-nav ul {
-	text-align: right;
+ main.menu img {
+     background-color: rgb(255 255 255);
+     padding: 1rem;
+     box-sizing: border-box;
 }
-
-nav ul li.selected a {
-  background-color: #FFA5D8;
-  color: #9579D1;
+ nav ul {
+     text-align: right;
 }
-
-nav ul li {
-	list-style-type: none;
-	margin-bottom: 0.5rem;
-	text-transform: uppercase;
-	font-weight: bold;
+ nav ul li.selected a {
+     background-color: #FFA5D8;
+     color: #F2C9E0;
 }
-
-nav ul li a {
-	color: #FFA5D8;
-	background-color: #9579D1;
-	text-decoration: none;
-	padding: 0.8rem;
-	font-size:2em;
-	display: inline-block;
+ nav ul li {
+     list-style-type: none;
+     margin-bottom: 0.5rem;
+     text-transform: uppercase;
+     font-weight: bold;
 }
-
-main ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 1em;
+ nav ul li a {
+     color: #FFA5D8;
+     background-color: #F2C9E0;
+     text-decoration: none;
+     padding: 0.8rem;
+     font-size:2em;
+     display: inline-block;
 }
-
-h2, h3, h4 {
-	font-weight: bold;
+ main ul {
+     list-style-type: none;
+     margin: 0;
+     padding: 1em;
 }
-
-h2 {
-	font-size: 1.5rem;
-	margin: 1rem 0 0.5rem;
+ h2, h3, h4 {
+     font-weight: bold;
 }
-
-h3 {
-	font-size: 1.2rem;
-	margin: 1rem 0 0.5rem;
+ h2 {
+     font-size: 1.5rem;
+     margin: 1rem 0 0.5rem;
 }
-
-p {
-	margin: 0.5rem 0;
+ h3 {
+     font-size: 1.2rem;
+     margin: 1rem 0 0.5rem;
+     font-family: "limon-bold-marker-outline", sans-serif;
 }
-
-
-main.menu ul {
-	margin: 0;
-	padding: 0;
+ h4 {
+     font-family: "limon-bold-marker", sans-serif;
 }
-
-main.menu ul li {
-	display: grid;
-	grid-template-columns: 1fr auto;
-	margin-bottom: 1.5rem;
+ p {
+     margin: 0.5rem 0;
 }
-
-p.description {
-	grid-column: 1 / 3;
-	margin: 0.2rem 0;
+ main.menu ul {
+     margin: 0;
+     padding: 0;
 }
-
-p.price {
-	grid-column: 2 / 3;
-	grid-row: 1 / 2;
-	margin: 0.2rem 0;
-	color: #92DDEA
+ main.menu ul li {
+     display: grid;
+     grid-template-columns: 1fr auto;
+     margin-bottom: 1.5rem;
 }
-
-p.slogan {
-	font-size: 3.5em;
-	font-style: italic;
-	text-align: left;
-	margin: 0.5em 1em 2em 0.25em;
-	color: rgb(255 255 255);
+ p.description {
+     grid-column: 1 / 3;
+     margin: 0.2rem 0;
 }
-
-address {
-	color: #000000;
-	margin: 0.3rem;
-	font-size: 1.5em
+ p.price {
+     grid-column: 2 / 3;
+     grid-row: 1 / 2;
+     margin: 0.2rem 0;
+     color: #D92399 
 }
-
-footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	background: #92DDEA;
-	color: rgb(0 0 0);
-	padding: 0.75em 1em 0em;
-	box-sizing: border-box;
-	text-align: left;
-	font-size: 0.9rem;
+ p.slogan {
+     font-family: "limon-script", sans-serif;
+     font-size: 3.5em;
+     font-style: italic;
+     text-align: left;
+     margin: 0.5em 1em 2em 0.25em;
+     color: rgb(255 255 255);
 }
-
-footer p {
-	margin: 0;
+ address {
+     color: rgb(0 0 0);
+     margin: 0.3rem;
 }
-
-@media screen and (min-width: 60em) {
-  main.menu ul {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-column-gap: 6em;
-  }
-
-  ul {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-  }
-
-  nav ul {
-    display: grid;
-    font-size: 1.5rem;
-    grid-template-columns: repeat(3, auto);
-    grid-gap: 0 0.75rem;
-    justify-content: end;
-    margin: 1.5em 0 0 0;
-  }
+ footer {
+     position: absolute;
+     bottom: 0;
+     width: 100%;
+     background: #F2B6D7;
+     color: rgb(0 0 0);
+     padding: 0.75em 1em 0em;
+     box-sizing: border-box;
+     text-align: left;
+     font-size: 0.9rem;
 }
-
-article {
-  background-color: #FFA5D8;
+ footer p {
+     margin: 0;
 }
+ @media screen and (min-width: 60em) {
+     main.menu ul {
+         display: grid;
+         grid-template-columns: auto auto;
+         grid-column-gap: 6em;
+    }
+     ul {
+         display: grid;
+         grid-template-columns: repeat(4, 1fr);
+    }
+     nav ul {
+         display: grid;
+         font-size: 1.5rem;
+         grid-template-columns: repeat(3, auto);
+         grid-gap: 0 0.75rem;
+         justify-content: end;
+         margin: 1.5em 0 0 0;
+    }
+     main.menu img {
+         display: block;
+         width: auto;
+         max-width: 50em;
+         margin: 1rem auto 0.5rem;
+         box-sizing: border-box;
+    }
+     main.menu h2, main.menu h3 {
+         text-align: center;
+    }
+}
+ 
