--- a/grc338/website-visual-language/style.css
+++ b/grc338/website-visual-language/style.css
@@ -46,7 +46,7 @@ img {
   display: block;
   width: 100%;
   max-width: 90em;   
-  min-width: 20rem;   
+  min-width: 0em;   
   margin: 1rem auto 2rem;   
   box-sizing: border-box;
 }
@@ -210,14 +210,15 @@ main > img + article {
   }
 
   main > img + article {
-    padding-left: 1em;
-    padding-right: 1em;
-  }
-}
-
-@media screen and (min-width: 60em) {
-  main > img + article {
     padding-left: 8em;
     padding-right: 8em;
   }
+
+@media screen and (max-width: 40em) {
+  img {
+    min-width: 0;
+    max-width: 100%;
+  }
+}
+  
 }
